Remove sqlite support and some other dependencies